--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     height: 100vh;
     width: 600px;
-    background-color: blue; 
+    background-color: black; 
 }
 
 .container {
@@ -20,5 +20,13 @@ body {
     height: 500px;
     width: 500px;
     margin: 0 auto;
+    background-color: grey;
+}
+
+.square {
+    display: flex;
+    flex-direction: row;
+    width: 30px;
+    height: 30px;
     background-color: white;
-} 
+}
